package domain.admit.application

case class AdmitApplicationDateTime(value: String)
