package domain.authentication

case class UserPassword(value: String)
