package domain.core.user_name

case class UserName(first: String)
